@@ -1,3 +1,15 @@
+2003-05-7  Eric Boix <Eric.Boix@creatis.insa-lyon.fr> with JPR
+      * src/gdcmHeader.cxx: the constructor no longer exits when an
+        unexisting file is given as argument.
+      * The subdirectory Data (containing all the images used for the
+        test suite) is not part of this repository anymore. A new module
+        containing those images is now available at 
+          :pserver:frog@cvs.creatis.insa-lyon.fr:2402/cvs/public
+        with the name gdcmData.
+        All the python scripts (including the package initialisation file
+        gdcmPython/__init__.py) were adapated to take this change into
+        account (basically GDCM_DATA_PATH is now GDCM_TEST_DATA_PATH).
+
 2003-05-5  Eric Boix <Eric.Boix@creatis.insa-lyon.fr> with JPR
       * vtk subdir added. Contains vtkGdcmReader.[cxx|h] a vtk class
         inherinting from vtkImageReader and testvtkGdcmReader.cxx a small
